fix layout bugs

--- a/source/stylesheets/quote_block.css.scss
+++ b/source/stylesheets/quote_block.css.scss
@@ -2,10 +2,11 @@ $quote-text-color: #666;
 
 blockquote {
   background: #f9f9f9;
-  border-left: 10px solid #ccc;
+  border-left: 4px solid #ccc;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   color: $quote-text-color;
+  border-radius: 2px;
 
   :before {
     color: #ccc;
